...
    return BlocProvider(
      lazy: false,
      create: (_) => GetIt.instance<ProductsCubit>()..fetchProducts(),
      child: Scaffold(
        appBar: AppBar(
          title: const Text(
            '🛍️ Products',
            style: TextStyle(fontWeight: FontWeight.bold),
          ),
          centerTitle: true,
        ),
        body: BlocBuilder<ProductsCubit, ProductsState>(
          builder: (context, state) {
...
